udpate gengo.scss

--- a/scss/gengo.scss
+++ b/scss/gengo.scss
@@ -1,2 +1,10 @@
 @import "compass";
+@import "variables";
+@import "theme-variables";
 // @import "fonts";
+@import "navbar";
+
+body {
+  background-color: #F4F4F4;
+  color: $base-text-color;
+}
