--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -5,8 +5,8 @@ $navbar-background-color: #fff;
   background-color: $navbar-background-color;
 
   .nav a {
-    padding-top: 14px;
-    padding-bottom: 10px;
+    margin: 0 15px;
+    padding: 14px 0 10px 0;
     border-bottom: solid 3px $navbar-background-color;
     color: $base-text-color;
     transition: border-bottom 0.3s ease;
