refactoring variable.scss

--- a/scss/gengo.scss
+++ b/scss/gengo.scss
@@ -1,10 +1,6 @@
 @import "compass";
 @import "variables";
-@import "theme-variables";
 // @import "fonts";
 @import "navbar";
 
-body {
-  background-color: #F4F4F4;
-  color: $base-text-color;
-}
+body {}
