--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -19,10 +19,10 @@ $brand-warning:         #f0ad4e !default;
 $brand-danger:          #d9534f !default;
 
 //## Gengo related colors
-$customer-base-color       : #1CAD7E !default;
-$translator-base-color     : #98D7CC !default;
-$developer-base-color      : #EA5E47 !default;
-$admin-base-color          : #4D4843 !default;
+$brand-customer:        #1CAD7E !default;
+$brand-translator:      #98D7CC !default;
+$brand-developer:       #EA5E47 !default;
+$brand-admin:           #4D4843 !default;
 
 
 //== Scaffolding
