--- a/docs/assets/css/gengo.css
+++ b/docs/assets/css/gengo.css
@@ -1,14 +1,12 @@
-/*!
- * Copyright 2011-2014 Gengo, Inc.
- * * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at :
- * http://www.apache.org/licenses/LICENSE-2.0
- */
-
 .navbar {
   border-bottom: 1px solid #dddddd;
   background-color: white;
+}
+.navbar > .container-fluid {
+  padding-left: 0;
+}
+.navbar > .container-fluid .navbar-brand {
+  margin: 0;
 }
 .navbar .nav a {
   margin: 0 17px;
@@ -125,6 +123,12 @@
   color: #A6A4A1;
   font-size: 13px;
 }
+.workbench .navbar .border-left {
+  border-left: 1px solid #716D69;
+}
+.workbench .navbar .nav {
+  padding: 0 22px;
+}
 .workbench .navbar .nav .navbar-text {
   padding: 0 12px;
 }
@@ -135,7 +139,7 @@
 }
 .workbench .navbar .nav a {
   margin: 0;
-  padding: 14px 17px 13px;
+  padding: 14px 8px 13px;
   color: #A6A4A1;
 }
 .workbench .navbar .nav a:hover,
