fix workebench nav link hover background-color

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -171,7 +171,7 @@ $workbecnh-text-color: #A6A4A1;
       color: $workbecnh-text-color;
     }
 
-    > a:hover,
+    > li > a:hover,
     .active > a,
     .open > a,
     .open > a:hover {
